--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Казино Слот</title>
+  <title>Casino-Slot</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -95,7 +95,7 @@
   function spin() {
     const bet = parseInt(document.getElementById("bet").value);
     if (isNaN(bet) || bet <= 0) {
-      alert("Введіть дійсну ставку");
+      alert("Geben Sie ein gültiges Gebot ein");
       return;
     }
 
